feature: 分组类型